# EpistemicFlow

./: .env.example  .env.template  .gitignore  API_DOCUMENTATION.md  Dockerfile  Makefile  README.md  check_database.py  docker-compose.yml  main.py  minimal_test.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  stop.bat  stop.sh  test_detection.bat  test_dir.bat  test_simple.bat  vitest.config.ts
agents/: __init__.py  base.py  epistemic_workflow.py  event_stream_native.py  ideation.py  polishing_and_review.py  research.py  reviewers.py  saga_integration.py  schemas.py  tools_native.py  vlm_review.py  workflow_native.py
api/: stream.py  stream_native.py
api/v1/: __init__.py
api/v1/endpoints/: config.py  workflow.py  workflow_start.py  workflow_start_native.py
core/: __init__.py  config.py  interrupt_event.py  sandbox.py  state_manager.py
database/: session.py
database/repositories/: workflow_state_repository.py
docs/: ARCHITECTURE_REFACTORING.md  HITL_SAGA_USAGE.md  PHASE3_DELIVERY.md  PHASE3_SUMMARY.md  PHASE4_DELIVERY.md  QUICKSTART_PHASE4.md
frontend/: QUICK_START.md  SSE_IMPLEMENTATION_SUMMARY.md  TEST_FIXES_SUMMARY.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/docs/: AGENT_SIDEBAR_IMPLEMENTATION.md
frontend/e2e/: example.spec.ts  global-setup.ts  hitl-workflow.spec.ts
frontend/e2e/utils/: test-helpers.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: ActivityLog.test.tsx  AgentRoster.test.tsx  MainCanvas.test.tsx  TerminalLog.test.tsx  WorkbenchLayout.test.tsx  logUtils.test.ts  useSSEStream.test.ts
frontend/src/__tests__/mocks/: mockSSEStream.ts
frontend/src/components/landing/: LandingPage.tsx
frontend/src/components/workbench/: ActivityLog.tsx  AgentRoster.tsx  AgentSidebar.tsx  LatexDownloadButton.tsx  MainCanvas.tsx  RollbackModal.tsx  TerminalLog.README.md  TerminalLog.tsx
frontend/src/components/workbench/__tests__/: AgentSidebar.test.tsx
frontend/src/components/workflow/: AutoGenerationView.tsx  InterventionDashboard.tsx  README.md  WorkflowCanvas.test.tsx  WorkflowCanvas.tsx  component.test.tsx  index.ts
frontend/src/examples/: TerminalLogExample.tsx  WorkflowCanvasDemo.tsx
frontend/src/hooks/: useSSEStream.ts
frontend/src/layouts/: WorkbenchLayout.tsx
frontend/src/test/: setup.ts
frontend/src/types/: log.ts  saga.ts  workflow.ts
models/: base.py  workflow_state.py
scripts/: init.py
src/components/workflow/: DiffViewer.tsx  StructuredForm.tsx  WorkflowCanvas.test.tsx  WorkflowCanvas.tsx  simple.test.ts
src/test/: setup.ts
tests/: conftest.py  test_e2e_final.py  test_e2e_workflow.py  test_state_manager.py  test_workflow_saga.py
tests/integration/: test_epistemic_workflow.py
tests/unit/: test_agents.py  test_config.py  test_literature.py  test_models.py  test_native_workflow.py  test_repositories.py  test_saga_integration.py
tools/: __init__.py  literature.py
